--- a/files/2_tp_semestre1/8_matrice_image.ipynb
+++ b/files/2_tp_semestre1/8_matrice_image.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F8_matrice_image.ipynb%26branch%3Dmaster'>TP 8 : matrices et images <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP 8 : matrices et images\n",
     "\n",
     "## NumPy\n",
     "\n",
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.216516Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.215541Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.396082Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.395449Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.572186Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.571632Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.728029Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.727314Z"
     }
    },
    "outputs": [],
@@ -39,10 +39,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.407664Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.404064Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.412524Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.412985Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.736966Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.736520Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.739670Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.740044Z"
     }
    },
    "outputs": [
@@ -75,10 +75,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.419180Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.418596Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.421604Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.422203Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.743922Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.743469Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.745754Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.745378Z"
     }
    },
    "outputs": [
@@ -122,10 +122,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.428890Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.427457Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.431016Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.430439Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.749187Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.748776Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.750613Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.750953Z"
     }
    },
    "outputs": [
@@ -155,10 +155,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.437760Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.436355Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.440101Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.439497Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.754306Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.753890Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.756408Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.756062Z"
     }
    },
    "outputs": [
@@ -189,10 +189,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.447735Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.446599Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.449541Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.450034Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.760767Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.760351Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.764515Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.764175Z"
     }
    },
    "outputs": [
@@ -232,10 +232,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.454961Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.454182Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.521115Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.521635Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.767937Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.767486Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.817898Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.818321Z"
     }
    },
    "outputs": [
@@ -246,8 +246,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2126/3547290897.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msomme\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_2126/3547290897.py\u001b[0m in \u001b[0;36msomme\u001b[0;34m(m)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msomme\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_2129/3547290897.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0msomme\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_2129/3547290897.py\u001b[0m in \u001b[0;36msomme\u001b[0;34m(m)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msomme\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'ellipsis' object is not iterable"
      ]
     }
@@ -275,10 +275,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.529248Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.528642Z",
-     "iopub.status.idle": "2022-01-11T20:21:00.531054Z",
-     "shell.execute_reply": "2022-01-11T20:21:00.531586Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.824304Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.823832Z",
+     "iopub.status.idle": "2022-01-11T20:45:48.826091Z",
+     "shell.execute_reply": "2022-01-11T20:45:48.826430Z"
     }
    },
    "outputs": [
@@ -336,10 +336,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:00.536691Z",
-     "iopub.status.busy": "2022-01-11T20:21:00.536093Z",
-     "iopub.status.idle": "2022-01-11T20:21:04.427079Z",
-     "shell.execute_reply": "2022-01-11T20:21:04.427581Z"
+     "iopub.execute_input": "2022-01-11T20:45:48.830249Z",
+     "iopub.status.busy": "2022-01-11T20:45:48.829828Z",
+     "iopub.status.idle": "2022-01-11T20:45:51.862213Z",
+     "shell.execute_reply": "2022-01-11T20:45:51.862576Z"
     }
    },
    "outputs": [
@@ -371,10 +371,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:04.433302Z",
-     "iopub.status.busy": "2022-01-11T20:21:04.432683Z",
-     "iopub.status.idle": "2022-01-11T20:21:04.435769Z",
-     "shell.execute_reply": "2022-01-11T20:21:04.436254Z"
+     "iopub.execute_input": "2022-01-11T20:45:51.867515Z",
+     "iopub.status.busy": "2022-01-11T20:45:51.867035Z",
+     "iopub.status.idle": "2022-01-11T20:45:51.868648Z",
+     "shell.execute_reply": "2022-01-11T20:45:51.869011Z"
     }
    },
    "outputs": [
@@ -407,10 +407,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:04.441574Z",
-     "iopub.status.busy": "2022-01-11T20:21:04.440985Z",
-     "iopub.status.idle": "2022-01-11T20:21:04.446061Z",
-     "shell.execute_reply": "2022-01-11T20:21:04.446529Z"
+     "iopub.execute_input": "2022-01-11T20:45:51.872839Z",
+     "iopub.status.busy": "2022-01-11T20:45:51.872405Z",
+     "iopub.status.idle": "2022-01-11T20:45:51.874328Z",
+     "shell.execute_reply": "2022-01-11T20:45:51.874649Z"
     }
    },
    "outputs": [
@@ -441,10 +441,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:04.451647Z",
-     "iopub.status.busy": "2022-01-11T20:21:04.451011Z",
-     "iopub.status.idle": "2022-01-11T20:21:04.868341Z",
-     "shell.execute_reply": "2022-01-11T20:21:04.868970Z"
+     "iopub.execute_input": "2022-01-11T20:45:51.878320Z",
+     "iopub.status.busy": "2022-01-11T20:45:51.877903Z",
+     "iopub.status.idle": "2022-01-11T20:45:52.212540Z",
+     "shell.execute_reply": "2022-01-11T20:45:52.212896Z"
     }
    },
    "outputs": [
@@ -496,10 +496,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:04.874104Z",
-     "iopub.status.busy": "2022-01-11T20:21:04.873221Z",
-     "iopub.status.idle": "2022-01-11T20:21:05.303598Z",
-     "shell.execute_reply": "2022-01-11T20:21:05.304115Z"
+     "iopub.execute_input": "2022-01-11T20:45:52.216744Z",
+     "iopub.status.busy": "2022-01-11T20:45:52.216320Z",
+     "iopub.status.idle": "2022-01-11T20:45:52.539607Z",
+     "shell.execute_reply": "2022-01-11T20:45:52.539987Z"
     }
    },
    "outputs": [
@@ -567,10 +567,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:05.333676Z",
-     "iopub.status.busy": "2022-01-11T20:21:05.317414Z",
-     "iopub.status.idle": "2022-01-11T20:21:05.590995Z",
-     "shell.execute_reply": "2022-01-11T20:21:05.590357Z"
+     "iopub.execute_input": "2022-01-11T20:45:52.548336Z",
+     "iopub.status.busy": "2022-01-11T20:45:52.547898Z",
+     "iopub.status.idle": "2022-01-11T20:45:52.746493Z",
+     "shell.execute_reply": "2022-01-11T20:45:52.746847Z"
     },
     "tags": [
      "hide"
@@ -605,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Redimmensionnement\n",
+    "## Redimensionnement\n",
     "\n",
     "On peut réduire la taille d'une image en divisant sa largeur et sa hauteur par un facteur $k$ :"
    ]
@@ -626,10 +626,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:05.598338Z",
-     "iopub.status.busy": "2022-01-11T20:21:05.596655Z",
-     "iopub.status.idle": "2022-01-11T20:21:05.616888Z",
-     "shell.execute_reply": "2022-01-11T20:21:05.617405Z"
+     "iopub.execute_input": "2022-01-11T20:45:52.751594Z",
+     "iopub.status.busy": "2022-01-11T20:45:52.751167Z",
+     "iopub.status.idle": "2022-01-11T20:45:52.768530Z",
+     "shell.execute_reply": "2022-01-11T20:45:52.769205Z"
     }
    },
    "outputs": [
@@ -640,8 +640,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2126/1988019624.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mm_red\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_2126/1988019624.py\u001b[0m in \u001b[0;36mreduction\u001b[0;34m(m, k)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_red\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_red\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m             \u001b[0mm_red\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mm_red\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_2129/1988019624.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mm_red\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_2129/1988019624.py\u001b[0m in \u001b[0;36mreduction\u001b[0;34m(m, k)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_red\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_red\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m             \u001b[0mm_red\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mm_red\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a number, not 'ellipsis'"
      ]
     }
@@ -662,10 +662,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:05.623587Z",
-     "iopub.status.busy": "2022-01-11T20:21:05.622919Z",
-     "iopub.status.idle": "2022-01-11T20:21:06.075458Z",
-     "shell.execute_reply": "2022-01-11T20:21:06.076172Z"
+     "iopub.execute_input": "2022-01-11T20:45:52.774349Z",
+     "iopub.status.busy": "2022-01-11T20:45:52.773687Z",
+     "iopub.status.idle": "2022-01-11T20:45:53.129665Z",
+     "shell.execute_reply": "2022-01-11T20:45:53.130019Z"
     },
     "tags": [
      "hide"
@@ -735,10 +735,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:06.082495Z",
-     "iopub.status.busy": "2022-01-11T20:21:06.078845Z",
-     "iopub.status.idle": "2022-01-11T20:21:06.086194Z",
-     "shell.execute_reply": "2022-01-11T20:21:06.085585Z"
+     "iopub.execute_input": "2022-01-11T20:45:53.134884Z",
+     "iopub.status.busy": "2022-01-11T20:45:53.134456Z",
+     "iopub.status.idle": "2022-01-11T20:45:53.136520Z",
+     "shell.execute_reply": "2022-01-11T20:45:53.136154Z"
     },
     "tags": [
      "hide"
@@ -776,10 +776,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-11T20:21:06.091107Z",
-     "iopub.status.busy": "2022-01-11T20:21:06.090528Z",
-     "iopub.status.idle": "2022-01-11T20:21:20.319849Z",
-     "shell.execute_reply": "2022-01-11T20:21:20.319119Z"
+     "iopub.execute_input": "2022-01-11T20:45:53.142020Z",
+     "iopub.status.busy": "2022-01-11T20:45:53.141594Z",
+     "iopub.status.idle": "2022-01-11T20:46:04.092711Z",
+     "shell.execute_reply": "2022-01-11T20:46:04.093089Z"
     },
     "tags": [
      "hide"
