--- a/files/2_tp_semestre1/5_recursivite.ipynb
+++ b/files/2_tp_semestre1/5_recursivite.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T10:22:59.237569Z",
-     "iopub.status.busy": "2021-12-08T10:22:59.236329Z",
-     "iopub.status.idle": "2021-12-08T10:22:59.240663Z",
-     "shell.execute_reply": "2021-12-08T10:22:59.240156Z"
+     "iopub.execute_input": "2022-01-12T17:42:54.353936Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.352890Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.356275Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.355786Z"
     }
    },
    "outputs": [],
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T10:22:59.246046Z",
-     "iopub.status.busy": "2021-12-08T10:22:59.244817Z",
-     "iopub.status.idle": "2021-12-08T10:22:59.249232Z",
-     "shell.execute_reply": "2021-12-08T10:22:59.248720Z"
+     "iopub.execute_input": "2022-01-12T17:42:54.361032Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.360418Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.364479Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.364933Z"
     }
    },
    "outputs": [
@@ -124,6 +124,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T17:42:54.374265Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.372661Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.375921Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.375460Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dessin(n):\n",
+    "    if n == 0:\n",
+    "        return\n",
+    "    for i in range(n):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()\n",
+    "    dessin(n-1)\n",
+    "dessin(5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -145,6 +183,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T17:42:54.384147Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.383540Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.386082Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.386557Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "def dessin(k, n):\n",
+    "    if n == k:\n",
+    "        return\n",
+    "    for i in range(k):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()\n",
+    "\n",
+    "    dessin(k+1, n)\n",
+    "    for i in range(k):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()\n",
+    "\n",
+    "dessin(1, 5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,6 +247,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T17:42:54.392381Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.391859Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.393862Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.394273Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def somme(n):\n",
+    "    s = 0\n",
+    "    for i in range(n+1):\n",
+    "        s += i**2\n",
+    "    return s"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,13 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T10:22:59.259447Z",
-     "iopub.status.busy": "2021-12-08T10:22:59.256971Z",
-     "iopub.status.idle": "2021-12-08T10:22:59.262280Z",
-     "shell.execute_reply": "2021-12-08T10:22:59.261857Z"
+     "iopub.execute_input": "2022-01-12T17:42:54.404132Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.401506Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.406369Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.406775Z"
     }
    },
    "outputs": [
@@ -190,7 +297,7 @@
        "55"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +334,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T17:42:54.412021Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.410965Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.412639Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.413058Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# 1.\n",
+    "# n! = n*(n - 1)!\n",
+    "\n",
+    "# 2.\n",
+    "def fact(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * fact(n - 1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,13 +371,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-12-08T10:22:59.268333Z",
-     "iopub.status.busy": "2021-12-08T10:22:59.267169Z",
-     "iopub.status.idle": "2021-12-08T10:22:59.268920Z",
-     "shell.execute_reply": "2021-12-08T10:22:59.269326Z"
+     "iopub.execute_input": "2022-01-12T17:42:54.417573Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.416767Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.420586Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.420962Z"
     }
    },
    "outputs": [],
@@ -270,6 +404,37 @@
    },
    "source": [
     "**Exercice** : Réécrire `dichotomie` sous forme de fonction récursive, en mettant`i` et `j` en arguments.  Tester sur des exemples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T17:42:54.426985Z",
+     "iopub.status.busy": "2022-01-12T17:42:54.425816Z",
+     "iopub.status.idle": "2022-01-12T17:42:54.428370Z",
+     "shell.execute_reply": "2022-01-12T17:42:54.428834Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def dichotomie(e, L, i, j):\n",
+    "    if i > j:\n",
+    "        return False\n",
+    "    m = (i + j)//2\n",
+    "    if e < L[m]:\n",
+    "        return dichotomie(e, L, i, m - 1)\n",
+    "    elif e > L[m]:\n",
+    "        return dichotomie(e, L, m + 1, j)\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "L = [1, 4, 7, 11, 64]\n",
+    "assert dichotomie(1, L, 0, len(L) - 1) and not dichotomie(65, L, 0, len(L) - 1)"
    ]
   }
  ],
