--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F7_glouton.ipynb%26branch%3Dmaster'>TP 7 : Algorithmes gloutons <img src=https://mybinder.org/badge.svg></a></center>"
+    "# TP 7 : Algorithmes gloutons"
    ]
   },
   {
@@ -44,6 +44,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.124741Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.123787Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.127480Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.126946Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def somme(L):\n",
+    "    s = 0\n",
+    "    for i in L:\n",
+    "        s += i\n",
+    "    return s"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -52,6 +75,29 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction pour déterminer si une liste est triée dans l'ordre croissant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.131494Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.130860Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.132848Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.132490Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def croissant(L):\n",
+    "    for i in range(len(L)-1):\n",
+    "        if L[i] > L[i+1]:\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
@@ -93,6 +139,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.143862Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.142869Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.147870Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.147394Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 1, 1]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def rendre_monnaie(c, pieces):\n",
+    "    pieces.sort(key=lambda x: -x)\n",
+    "    rendu = []\n",
+    "    for p in pieces:\n",
+    "        while p <= c:\n",
+    "            rendu.append(p)\n",
+    "            c -= p\n",
+    "    return rendu\n",
+    "\n",
+    "rendre_monnaie(5, [1, 3, 7])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -102,6 +187,17 @@
    "source": [
     "**Exercice** : Trouver un exemple simple dans lequel l'algorithme glouton n'est pas optimal.  \n",
     "Il faut donc trouver des valeurs de pièces $p_1$, ..., $p_n$ et de $c$ tel que le nombre de pièces utilisées par l'algorithme glouton n'est pas le minimum possible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "cor"
+    ]
+   },
+   "source": [
+    "On considère des pièces $1, 3, 4$ et $c = 6$. Alors l'algorithme glouton va rendre $4 + 1 + 1$ alors que l'optimum est $4 + 2$. "
    ]
   },
   {
@@ -132,6 +228,28 @@
    "source": [
     "**Exercice** : Écrire une fonction `intersecte` pour déterminer si deux cours se chevauchent.  \n",
     "Par exemple, `intersecte((1, 3), (2, 4))` doit renvoyer `True` mais `intersecte((1, 2), (3, 5))` doit renvoyer `False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.153413Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.152181Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.154130Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.154589Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def intersecte(c1, c2):\n",
+    "    return (c1[0] <= c2[0] and c1[1] >= c2[0]) or (c2[0] <= c1[0] and c2[1] >= c1[0])\n",
+    "\n",
+    "assert intersecte((1, 3), (2, 4)) and not intersecte((1, 2), (3, 5))"
    ]
   },
   {
@@ -186,6 +304,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.159321Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.158720Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.161224Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.160787Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def intersecte_list(c, L):\n",
+    "    for cours in L:\n",
+    "        if intersecte(c, cours):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "assert intersecte_list((1, 3), [(2, 5), (4, 6)]) and not intersecte_list((1, 3), [(4, 6), (5, 7)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,6 +349,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.167169Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.165670Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.168349Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.168821Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def choisir_salle(c, salles):\n",
+    "    for s in range(len(salles)):\n",
+    "        if not intersecte_list(c, salles[s]):\n",
+    "            return s\n",
+    "    return -1\n",
+    "\n",
+    "assert choisir_salle((7, 10), [[(9, 11)], [(12, 15)]]) == 1\n",
+    "assert choisir_salle((7, 10), [[(8, 10)], [(9, 12)]]) == -1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -219,13 +388,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-01-05T10:59:17.044536Z",
-     "iopub.status.busy": "2022-01-05T10:59:17.044058Z",
-     "iopub.status.idle": "2022-01-05T10:59:17.054068Z",
-     "shell.execute_reply": "2022-01-05T10:59:17.053648Z"
+     "iopub.execute_input": "2022-01-12T18:30:51.173462Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.171444Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.175816Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.176255Z"
     }
    },
    "outputs": [
@@ -234,7 +403,7 @@
      "evalue": "invalid syntax (2982992462.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2135/2982992462.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2145/2982992462.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -249,6 +418,47 @@
     "                break # on sort de la boucle for\n",
     "    \n",
     "    return salles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-01-12T18:30:51.184221Z",
+     "iopub.status.busy": "2022-01-12T18:30:51.183125Z",
+     "iopub.status.idle": "2022-01-12T18:30:51.186537Z",
+     "shell.execute_reply": "2022-01-12T18:30:51.186088Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(8, 11), (12, 14)], [(9, 10), (11, 15)]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def allocation_salles(cours):\n",
+    "    cours.sort(key=lambda c: c[0]) # trie les cours par ordre de début croissant\n",
+    "    salles = []\n",
+    "    for c in cours: # parcours de la liste cours\n",
+    "        s = choisir_salle(c, salles)\n",
+    "        if s == -1:\n",
+    "            salles.append([c])\n",
+    "        else:\n",
+    "            salles[s].append(c)\n",
+    "    return salles\n",
+    "\n",
+    "allocation_salles([(8, 11), (9, 10), (12, 14), (11, 15)])"
    ]
   },
   {
