--- a/files/2_tp_semestre1/7_glouton.ipynb
+++ b/files/2_tp_semestre1/7_glouton.ipynb
@@ -44,29 +44,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.124741Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.123787Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.127480Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.126946Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def somme(L):\n",
-    "    s = 0\n",
-    "    for i in L:\n",
-    "        s += i\n",
-    "    return s"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": [
@@ -75,29 +52,6 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction pour déterminer si une liste est triée dans l'ordre croissant."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.131494Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.130860Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.132848Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.132490Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "def croissant(L):\n",
-    "    for i in range(len(L)-1):\n",
-    "        if L[i] > L[i+1]:\n",
-    "            return False\n",
-    "    return True"
    ]
   },
   {
@@ -140,41 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.143862Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.142869Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.147870Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.147394Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 1, 1]"
+       "[16, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def rendre_monnaie(c, pieces):\n",
-    "    pieces.sort(key=lambda x: -x)\n",
-    "    rendu = []\n",
-    "    for p in pieces:\n",
-    "        while p <= c:\n",
-    "            rendu.append(p)\n",
-    "            c -= p\n",
+    "    pieces.sort(key=lambda x: -x) # tri par ordre décroissant\n",
+    "    rendu = [] # liste des pièces utilisées par l'algo. glouton\n",
+    "    d=c\n",
+    "    a=0\n",
+    "    while d!=0:\n",
+    "        if d-pieces[a]>=0:\n",
+    "            d=d-pieces[a]\n",
+    "            rendu.append(pieces[a])\n",
+    "        else:\n",
+    "            a+=1\n",
     "    return rendu\n",
-    "\n",
-    "rendre_monnaie(5, [1, 3, 7])"
+    "rendre_monnaie(30,[16,15,1])"
    ]
   },
   {
@@ -191,13 +138,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "cor"
-    ]
-   },
+   "metadata": {},
    "source": [
-    "On considère des pièces $1, 3, 4$ et $c = 6$. Alors l'algorithme glouton va rendre $4 + 1 + 1$ alors que l'optimum est $4 + 2$. "
+    "Si on a c=30 et pieces=[16,15,1]"
    ]
   },
   {
@@ -232,24 +175,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.153413Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.152181Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.154130Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.154589Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def intersecte(c1, c2):\n",
-    "    return (c1[0] <= c2[0] and c1[1] >= c2[0]) or (c2[0] <= c1[0] and c2[1] >= c1[0])\n",
-    "\n",
-    "assert intersecte((1, 3), (2, 4)) and not intersecte((1, 2), (3, 5))"
+    "def intersecte(a,b):\n",
+    "    c=0\n",
+    "    for i in range(a[0],a[1]):\n",
+    "        for j in range(b[0],b[1]):\n",
+    "            if i==j:\n",
+    "                c+=1\n",
+    "    if c>=1:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "intersecte((1, 3), (2, 4))"
    ]
   },
   {
@@ -305,27 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.159321Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.158720Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.161224Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.160787Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def intersecte_list(c, L):\n",
-    "    for cours in L:\n",
-    "        if intersecte(c, cours):\n",
+    "def intersecte_list(c,l):\n",
+    "    for e in l:\n",
+    "        if intersecte(e,c)==True:\n",
     "            return True\n",
-    "    return False\n",
-    "\n",
-    "assert intersecte_list((1, 3), [(2, 5), (4, 6)]) and not intersecte_list((1, 3), [(4, 6), (5, 7)])"
+    "    return False"
    ]
   },
   {
@@ -350,28 +289,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.167169Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.165670Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.168349Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.168821Z"
-    },
-    "tags": [
-     "cor"
-    ]
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def choisir_salle(c, salles):\n",
-    "    for s in range(len(salles)):\n",
-    "        if not intersecte_list(c, salles[s]):\n",
-    "            return s\n",
-    "    return -1\n",
-    "\n",
-    "assert choisir_salle((7, 10), [[(9, 11)], [(12, 15)]]) == 1\n",
-    "assert choisir_salle((7, 10), [[(8, 10)], [(9, 12)]]) == -1"
+    "b=[[(12, 15),(16,19)], [(22, 25)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, 1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def intersecte_bis(a,salles):\n",
+    "    c=0\n",
+    "    d=0\n",
+    "    r=0\n",
+    "    for j in range(len(salles)):\n",
+    "        for h in range(len(salles[j])):\n",
+    "            c=0\n",
+    "            for k in range(salles[j][h][0],salles[j][h][1]+1):\n",
+    "                for i in range(a[0],a[1]+1):\n",
+    "                    if i==k:\n",
+    "                        c+=1\n",
+    "            if c>=2:\n",
+    "                d=1\n",
+    "            else:\n",
+    "                d=0\n",
+    "                r=j\n",
+    "    if d==1:\n",
+    "        return True,r\n",
+    "    else:\n",
+    "        return False,r\n",
+    "intersecte_bis((7, 11), b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def choisir_salle(c,salles):\n",
+    "    a,b=intersecte_bis(c,salles)\n",
+    "    if a==False:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return (-1)\n",
+    "choisir_salle((7, 10), b)"
    ]
   },
   {
@@ -390,75 +378,40 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.173462Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.171444Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.175816Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.176255Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2982992462.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_2145/2982992462.py\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if ... # si on peut mettre le cours c en salle s\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def allocation_salles(cours):\n",
-    "    cours.sort(key=lambda c: c[0]) # trie les cours par ordre de début croissant\n",
-    "    salles = []\n",
-    "    for c in cours: # parcours de la liste cours\n",
-    "        for s in range(len(salles)): # teste si on peut mettre le cours c en salle s\n",
-    "            if ... # si on peut mettre le cours c en salle s\n",
-    "                salles[s].append(c) # on ajoute le cours c à la liste des cours de la salle s\n",
-    "                break # on sort de la boucle for\n",
-    "    \n",
-    "    return salles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-01-12T18:30:51.184221Z",
-     "iopub.status.busy": "2022-01-12T18:30:51.183125Z",
-     "iopub.status.idle": "2022-01-12T18:30:51.186537Z",
-     "shell.execute_reply": "2022-01-12T18:30:51.186088Z"
-    },
-    "tags": [
-     "cor"
-    ]
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[(8, 11), (12, 14)], [(9, 10), (11, 15)]]"
+       "[[(8, 13)],\n",
+       " [(9, 11)],\n",
+       " [(9, 14)],\n",
+       " [(9, 10), (11, 12), (12, 15)],\n",
+       " [(13, 15)],\n",
+       " [(14, 16)],\n",
+       " [(14, 17)]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def allocation_salles(cours):\n",
-    "    cours.sort(key=lambda c: c[0]) # trie les cours par ordre de début croissant\n",
+    "    cours.sort(key=lambda c :c[0]) # trie les cours par ordre de début croissant\n",
     "    salles = []\n",
-    "    for c in cours: # parcours de la liste cours\n",
-    "        s = choisir_salle(c, salles)\n",
-    "        if s == -1:\n",
-    "            salles.append([c])\n",
+    "    if len(salles)==0:\n",
+    "            salles.append([cours[0]])\n",
+    "    for i in range(1,len(cours)-1): # parcours de la liste cours\n",
+    "        a=choisir_salle(cours[i],salles)\n",
+    "        if a!=(-1):\n",
+    "            salles[a].append(cours[i])\n",
     "        else:\n",
-    "            salles[s].append(c)\n",
+    "            salles.append([cours[i]])\n",
     "    return salles\n",
-    "\n",
-    "allocation_salles([(8, 11), (9, 10), (12, 14), (11, 15)])"
+    "allocation_salles([(9,11),(12,15),(8,13),(15,17),(9,14),(11,12),(14,16),(9,10),(14,17),(13,15)])"
    ]
   },
   {
@@ -493,6 +446,45 @@
    "source": [
     "**Exercice** : Écrire cet algorithme glouton en Python."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(9, 10)],\n",
+       " [(9, 11), (11, 12)],\n",
+       " [(8, 13)],\n",
+       " [(9, 14)],\n",
+       " [(12, 15)],\n",
+       " [(13, 15)],\n",
+       " [(14, 16)],\n",
+       " [(15, 17)]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def inter_schedul(cours):\n",
+    "    cours.sort(key=lambda c: c[1])\n",
+    "    inter=[]\n",
+    "    if len(inter)==0:\n",
+    "            inter.append([cours[0]])\n",
+    "    for i in range(1,len(cours)-1): # parcours de la liste cours\n",
+    "        a=choisir_salle(cours[i],inter)\n",
+    "        if a!=(-1):\n",
+    "            inter[a].append(cours[i])\n",
+    "        else:\n",
+    "            inter.append([cours[i]])\n",
+    "    return inter\n",
+    "inter_schedul([(9,11),(12,15),(8,13),(15,17),(9,14),(11,12),(14,16),(9,10),(14,17),(13,15)])"
+   ]
   }
  ],
  "metadata": {
@@ -500,7 +492,7 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -514,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
