--- a/files/2_tp_semestre1/9_tris.ipynb
+++ b/files/2_tp_semestre1/9_tris.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F9_tris.ipynb%26branch%3Dmaster'>TP 9 : Algorithmes de tri <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP 9 : Algorithmes de tri\n",
     "\n",
-    "On souhaite trier une liste `L` c'est-à-dire réarranger ses éléments pour qu'ils soient rangés dans l'ordre croissant.  \n",
+    "On souhaite trier une liste `L`, c'est-à-dire réarranger ses éléments pour qu'ils soient rangés dans l'ordre croissant.  \n",
     "Par exemple, si `L = [5, 1, -4, 2, -8, 7]` alors un algorithme de tri doit permettre d'obtenir la liste `[-8, -4, 1, 2, 5, 7]`.  \n",
     "Dans ce TP, nous étudions plusieurs algorithmes de tri. **Pensez à bien tester toutes vos fonctions**."
    ]
@@ -17,7 +17,7 @@
    "source": [
     "## Tri par sélection\n",
     "\n",
-    "Le tri par sélection consiste à chercher le minimum que l'on met en 1ère position de la liste, puis le 2ème plus petit élément en 2ème position..."
+    "Le tri par sélection consiste à chercher le minimum que l'on met en 1ère position de la liste, puis le 2ème plus petit élément en 2ème position...  "
    ]
   },
   {
