--- a/files/2_tp_semestre1/9_tris.ipynb
+++ b/files/2_tp_semestre1/9_tris.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F9_tris.ipynb%26branch%3Dmaster'>TP 9 : Algorithmes de tri <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP 9 : Algorithmes de tri\n",
     "\n",
     "On souhaite trier une liste `L`, c'est-à-dire réarranger ses éléments pour qu'ils soient rangés dans l'ordre croissant.  \n",
     "Par exemple, si `L = [5, 1, -4, 2, -8, 7]` alors un algorithme de tri doit permettre d'obtenir la liste `[-8, -4, 1, 2, 5, 7]`.  \n",
@@ -172,7 +172,7 @@
     ]
    },
    "source": [
-    "**Exercice** : Écrire une fonction `fusion` telle que `fusion(L1, L2)` renvoie une liste `L` qui est la fusion de `L1` et `L2`."
+    "**Exercice** : Écrire une fonction `fusion` telle que `fusion(L1, L2)` renvoie une liste `L` triée qui est la fusion de deux listes triées `L1` et `L2`."
    ]
   },
   {
