--- a/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
+++ b/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F3_algorithm_analysis%252F1_complexity%252Ftp2%252Ftp_complexity2.ipynb%26branch%3Dmaster'>TP : Complexité et temps d'exécution <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP : Complexité de la dichotomie et d'algorithmes de tri\n",
     "\n",
     "Dans ce TP, on revoit certains algorithmes vus au semestre en déterminant leur complexité. On compare ensuite cette complexité (théorique) avec le temps d'exécution constaté."
    ]
@@ -25,7 +25,7 @@
    },
    "source": [
     "**Exercice** : \n",
-    "1. Écrire une fonction `appartient` qui prend en argument une liste et un élément et qui retourne True si l'élément appartient à la liste, False sinon.\n",
+    "1. Écrire une fonction `appartient` qui prend en argument une liste et un élément et qui retourne `True` si l'élément appartient à la liste, `False` sinon.\n",
     "2. Quelle est la complexité de `appartient`, pour une liste de taille $n$ ?\n",
     "3. Vérifier cette complexité en utilisant la fonction `benchmark_appartient` ci-dessous : `benchmark_appartient(n, appartient)` affiche le temps d'exécution pour des listes allant jusqu'à la taille `n` (on testera par exemple pour `n = 10000`)."
    ]
@@ -35,10 +35,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:04:40.063084Z",
-     "iopub.status.busy": "2022-02-15T21:04:40.060471Z",
-     "iopub.status.idle": "2022-02-15T21:04:42.898039Z",
-     "shell.execute_reply": "2022-02-15T21:04:42.897449Z"
+     "iopub.execute_input": "2022-02-15T21:12:26.686106Z",
+     "iopub.status.busy": "2022-02-15T21:12:26.685346Z",
+     "iopub.status.idle": "2022-02-15T21:12:29.505988Z",
+     "shell.execute_reply": "2022-02-15T21:12:29.505323Z"
     }
    },
    "outputs": [],
@@ -53,9 +53,8 @@
     "        t = 0\n",
     "        for _ in range(n_sample):\n",
     "            L = sorted([random.random() for _ in range(i)])\n",
-    "            e = random.random()\n",
     "            start = time.time()\n",
-    "            f(e, L)\n",
+    "            f(random.random(), L)\n",
     "            t += time.time() - start\n",
     "        times.append(t/n_sample)\n",
     "        X.append(i)\n",
@@ -86,10 +85,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:04:42.902773Z",
-     "iopub.status.busy": "2022-02-15T21:04:42.902336Z",
-     "iopub.status.idle": "2022-02-15T21:04:42.904995Z",
-     "shell.execute_reply": "2022-02-15T21:04:42.905325Z"
+     "iopub.execute_input": "2022-02-15T21:12:29.510264Z",
+     "iopub.status.busy": "2022-02-15T21:12:29.508436Z",
+     "iopub.status.idle": "2022-02-15T21:12:29.513058Z",
+     "shell.execute_reply": "2022-02-15T21:12:29.512712Z"
     }
    },
    "outputs": [],
@@ -198,10 +197,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:04:42.911617Z",
-     "iopub.status.busy": "2022-02-15T21:04:42.910820Z",
-     "iopub.status.idle": "2022-02-15T21:04:42.912688Z",
-     "shell.execute_reply": "2022-02-15T21:04:42.912303Z"
+     "iopub.execute_input": "2022-02-15T21:12:29.519174Z",
+     "iopub.status.busy": "2022-02-15T21:12:29.518674Z",
+     "iopub.status.idle": "2022-02-15T21:12:29.521592Z",
+     "shell.execute_reply": "2022-02-15T21:12:29.520953Z"
     }
    },
    "outputs": [],
