--- a/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
+++ b/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F3_algorithm_analysis%252F1_complexity%252Ftp2%252Ftp_complexity2.ipynb%26branch%3Dmaster'>TP : Complexité de la dichotomie et d'algorithmes de tri <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP 2 : Complexité de la dichotomie et d'algorithmes de tri\n",
     "\n",
     "Dans ce TP, on revoit certains algorithmes vus au semestre en déterminant leur complexité. On compare ensuite cette complexité (théorique) avec le temps d'exécution constaté."
    ]
@@ -35,10 +35,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:12:26.686106Z",
-     "iopub.status.busy": "2022-02-15T21:12:26.685346Z",
-     "iopub.status.idle": "2022-02-15T21:12:29.505988Z",
-     "shell.execute_reply": "2022-02-15T21:12:29.505323Z"
+     "iopub.execute_input": "2022-02-15T21:13:51.967206Z",
+     "iopub.status.busy": "2022-02-15T21:13:51.966477Z",
+     "iopub.status.idle": "2022-02-15T21:13:54.963487Z",
+     "shell.execute_reply": "2022-02-15T21:13:54.963981Z"
     }
    },
    "outputs": [],
@@ -85,10 +85,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:12:29.510264Z",
-     "iopub.status.busy": "2022-02-15T21:12:29.508436Z",
-     "iopub.status.idle": "2022-02-15T21:12:29.513058Z",
-     "shell.execute_reply": "2022-02-15T21:12:29.512712Z"
+     "iopub.execute_input": "2022-02-15T21:13:54.970313Z",
+     "iopub.status.busy": "2022-02-15T21:13:54.969173Z",
+     "iopub.status.idle": "2022-02-15T21:13:54.970865Z",
+     "shell.execute_reply": "2022-02-15T21:13:54.971222Z"
     }
    },
    "outputs": [],
@@ -197,10 +197,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:12:29.519174Z",
-     "iopub.status.busy": "2022-02-15T21:12:29.518674Z",
-     "iopub.status.idle": "2022-02-15T21:12:29.521592Z",
-     "shell.execute_reply": "2022-02-15T21:12:29.520953Z"
+     "iopub.execute_input": "2022-02-15T21:13:54.978413Z",
+     "iopub.status.busy": "2022-02-15T21:13:54.977242Z",
+     "iopub.status.idle": "2022-02-15T21:13:54.978908Z",
+     "shell.execute_reply": "2022-02-15T21:13:54.979251Z"
     }
    },
    "outputs": [],
