--- a/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
+++ b/files/3_algorithm_analysis/1_complexity/tp2/tp_complexity2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center><a href='https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F3_algorithm_analysis%252F1_complexity%252Ftp2%252Ftp_complexity2.ipynb%26branch%3Dmaster'>TP 2 : Complexité de la dichotomie et d'algorithmes de tri <img src=https://mybinder.org/badge.svg></a></center>\n",
+    "# TP 2 : Complexité de la dichotomie et d'algorithmes de tri\n",
     "\n",
     "Dans ce TP, on revoit certains algorithmes vus au semestre en déterminant leur complexité. On compare ensuite cette complexité (théorique) avec le temps d'exécution constaté."
    ]
@@ -25,9 +25,9 @@
    },
    "source": [
     "**Exercice** : \n",
-    "1. Écrire une fonction `appartient` qui prend en argument une liste et un élément et qui retourne `True` si l'élément appartient à la liste, `False` sinon.\n",
+    "1. Écrire une fonction `appartient(e, L)` qui retourne `True` si l'élément `e` appartient à la liste `L`, `False` sinon.\n",
     "2. Quelle est la complexité de `appartient`, pour une liste de taille $n$ ?\n",
-    "3. Vérifier cette complexité en utilisant la fonction `benchmark_appartient` ci-dessous : `benchmark_appartient(n, appartient)` affiche le temps d'exécution pour des listes allant jusqu'à la taille `n` (on testera par exemple pour `n = 10000`)."
+    "3. Vérifier cette complexité en utilisant la fonction `benchmark_appartient` ci-dessous : Ecrire, par exemple, `benchmark_appartient(10000, appartient)` pour afficher le temps d'exécution pour des listes allant jusqu'à la taille `n` (on testera par exemple pour `n = 10000`)."
    ]
   },
   {
@@ -35,10 +35,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:13:51.967206Z",
-     "iopub.status.busy": "2022-02-15T21:13:51.966477Z",
-     "iopub.status.idle": "2022-02-15T21:13:54.963487Z",
-     "shell.execute_reply": "2022-02-15T21:13:54.963981Z"
+     "iopub.execute_input": "2022-02-16T12:56:30.908320Z",
+     "iopub.status.busy": "2022-02-16T12:56:30.907364Z",
+     "iopub.status.idle": "2022-02-16T12:56:34.457720Z",
+     "shell.execute_reply": "2022-02-16T12:56:34.457031Z"
     }
    },
    "outputs": [],
@@ -74,7 +74,7 @@
    },
    "source": [
     "**Exercice** : \n",
-    "1. Compléter la fonction `dichotomie` ci-dessous qui prend en argument une liste triée et un élément et qui retourne True si l'élément appartient à la liste, False sinon. On pourra revoir le TP sur la dichotomie si besoin.\n",
+    "1. Compléter la fonction `dichotomie` ci-dessous qui prend en argument une liste triée et un élément et qui retourne `True` si l'élément appartient à la liste, `False` sinon. On pourra revoir le TP sur la dichotomie si besoin.\n",
     "2. Montrer que la boucle `while` de `dichotomie(e, L)` s'exécute au plus $log(n)$ fois, où $n$ est la taille de `L`.\n",
     "*Indice* : Au bout de $k$ passages dans le `while`, que vaut $j - i$ (c'est-à-dire la taille de l'intervalle $[i, j]$)?\n",
     "3. Vérifier cette complexité en appelant `benchmark_appartient(50000, dichotomie)` (ou des plus petites valeurs de `n` si cela prend trop de temps)."
@@ -85,10 +85,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:13:54.970313Z",
-     "iopub.status.busy": "2022-02-15T21:13:54.969173Z",
-     "iopub.status.idle": "2022-02-15T21:13:54.970865Z",
-     "shell.execute_reply": "2022-02-15T21:13:54.971222Z"
+     "iopub.execute_input": "2022-02-16T12:56:34.462899Z",
+     "iopub.status.busy": "2022-02-16T12:56:34.462311Z",
+     "iopub.status.idle": "2022-02-16T12:56:34.466019Z",
+     "shell.execute_reply": "2022-02-16T12:56:34.465578Z"
     }
    },
    "outputs": [],
@@ -175,7 +175,7 @@
     "    for i in range(len(L)):\n",
     "        p = ...\n",
     "        decaler(...)\n",
-    "        ... # mettre l'anciennce valeur de L[i] dans L[p]\n",
+    "        ... # mettre l'ancienne valeur de L[i] dans L[p]\n",
     "```"
    ]
   },
@@ -197,10 +197,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-15T21:13:54.978413Z",
-     "iopub.status.busy": "2022-02-15T21:13:54.977242Z",
-     "iopub.status.idle": "2022-02-15T21:13:54.978908Z",
-     "shell.execute_reply": "2022-02-15T21:13:54.979251Z"
+     "iopub.execute_input": "2022-02-16T12:56:34.473415Z",
+     "iopub.status.busy": "2022-02-16T12:56:34.471955Z",
+     "iopub.status.idle": "2022-02-16T12:56:34.474084Z",
+     "shell.execute_reply": "2022-02-16T12:56:34.475127Z"
     }
    },
    "outputs": [],
